[project]
name = "lumifai-mcp-ta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pandas>=2.2.3",
    "pymongo>=4.11.2",
    "ta>=0.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2.0.0",
]
